force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/CAZ_Solicitud_Reprogramacion__c.object-meta.xml
<CustomObject>
    <label>Solicitud de reprogramación</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de Solicitud de reprogramación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de reprogramación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>