force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/fields/CAZ_Estado__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>En revisión</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>