force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/fields/CAZ_Fecha_de_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fecha_de_aprobacion__c</fullName>
    <label>Fecha de aprobación</label>
    <type>Date</type>
</CustomField>