force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/fields/CAZ_Fecha_Reprogramacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fecha_Reprogramacion__c</fullName>
    <label>Fecha de reprogramación</label>
    <type>Date</type>
</CustomField>