force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/fields/CAZ_Motivo_reprogramacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Motivo_reprogramacion__c</fullName>
    <label>Motivo reprogramación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>