force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/fields/CAZ_Numero_Orden__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Numero_Orden__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número Orden</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Solicitudes de reprogramación</relationshipLabel>
    <relationshipName>Solicitudes_de_reprogramaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>