force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/fields/CAZ_Numero_Orden_Agentforce__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Numero_Orden_Agentforce__c</fullName>
    <formula>CAZ_Numero_Orden__r.OrderNumber</formula>
    <label>Número de orden para agentforce</label>
    <type>Text</type>
</CustomField>