force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/fields/CAZ_Planta__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Planta__c</fullName>
    <formula>CAZ_Numero_Orden__r.CAZ_Planta__r.Name</formula>
    <label>Planta</label>
    <type>Text</type>
</CustomField>