force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falta de producto</fullName>
            </value>
            <value>
                <fullName>Fallas de transporte</fullName>
            </value>
            <value>
                <fullName>Ruta bloqueada</fullName>
            </value>
            <value>
                <fullName>Incapacidad de chofer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>