force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CAZ_Numero_Orden__c</columns>
    <columns>CAZ_Estado__c</columns>
    <columns>Motivo__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CAZ_Motivo_reprogramacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>