force-app/main/default/objects/CAZ_Solicitud_Reprogramacion__c/listViews/CAZ_Aprobador_OrderNueva_CAZ_Solicitud_Reprogramacion.listView-meta.xml
<ListView>
    <fullName>CAZ_Aprobador_OrderNueva_CAZ_Solicitud_Reprogramacion</fullName>
    <filterScope>Queue</filterScope>
    <label>CAZ_Aprobador_OrderNueva</label>
    <queue>CAZ_Aprobador_OrderNueva</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>